# learning-autogen

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  QUICKSTART.md  README.md  alembic.ini  app.py  autogen_demo.py  docker-compose.yml  main.py  nginx-prod.conf  nginx.conf  pyproject.toml  start.sh  start_dev.sh  start_production.sh  status.sh  test_v2_features.py  verify.sh
.github/workflows/: ci.yml
config/: .env.example
examples/: advanced_research.py  basic_research.py
frontend/: package-lock.json  package.json  vite.config.js  vite.config.test.js
frontend/src/: App.css  App.jsx  store.js
frontend/src/test/: App.test.jsx
migrations/: env.py  migrate.py  upgrade_v2.sql
src/autogen_research/: __init__.py  __main__.py  config.py
src/autogen_research/agents/: __init__.py  base_agent.py  specialized_agents.py
src/autogen_research/auth/: __init__.py  jwt_auth.py
src/autogen_research/database/: __init__.py  cache.py  models.py
src/autogen_research/models/: __init__.py  model_factory.py
src/autogen_research/tasks/: __init__.py  celery_app.py  research_tasks.py
src/autogen_research/teams/: __init__.py  research_team.py
src/autogen_research/tools/: __init__.py  calculator.py  web_search.py
src/autogen_research/utils/: __init__.py  logger.py  metrics.py  observability.py  tokens.py
static/: swagger.json
tests/: __init__.py  test_agents.py  test_api.py  test_cache.py  test_config.py  test_database.py  test_metrics.py  test_model_factory.py  test_research_team.py
